# ProfitLift

./: .gitignore  =0.0.9  =0.27  COMPLETION_CHECKLIST.md  Install_ProfitLift.bat  LICENSE  ProfitLift.spec  ProfitLift_HolyGrail_Book.html  README.md  README_TAURI.md  create_sample_data.py  debug_bundles.py  demo_products_catalog.csv  demo_transactions.csv  generate_pdf.js  idea.md  installer.iss  package-lock.json  pyproject.toml  requirements_no_pyarrow.txt  server.py  setup_github.sh  soul.md  test_uplift.py  verify_logic.py  verify_soul.py
.cursor/plans/: prof-1f55e78d.plan.md  profitlift-full-implementation-b98db277.plan.md
.github/workflows/: windows-build.yml
.venv_run/: pyvenv.cfg
app/: __init__.py
app/api/: __init__.py  main.py  models.py  realtime.py  routes.py  services.py
app/assets/: database.py  schema.sql
app/causal/: __init__.py  causal_estimator.py  t_learner.py  treatment_simulator.py
app/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
app/ingest/: context_enricher.py  csv_importer.py  india_calendar.py
app/mining/: __init__.py  context_aware_miner.py  context_segmenter.py  context_types.py  eclat.py  fpgrowth.py
app/score/: __init__.py  diversity_scorer.py  multi_objective.py  profit_calculator.py
app/sim/: __init__.py
app/tests/: __init__.py  conftest.py  test_api.py  (+5 more)
config/: default.yaml  scoring.yaml
docs/: DATA_FORMAT.md  DECISIONS.md  DEMO_SCRIPT.md  DESIGN.md  HOW_TO_GET_DATA.md  METHODS.md  METRICS.md  PRESENTATION_SUMMARY.md  QUICK_START.md  USER_MANUAL.md
myenv_311/: pyvenv.cfg
(+21 files in other folders)
